RESOLVED FIXED306335
REGRESSION(306270@main): [GStreamer] Broken build with GStreamer versions < 1.24
https://bugs.webkit.org/show_bug.cgi?id=306335
Summary REGRESSION(306270@main): [GStreamer] Broken build with GStreamer versions < 1.24
Philippe Normand
Reported 2026-01-27 08:03:48 PST
FAILED: bin/TestWebKitAPI/TestWebCore : && /usr/bin/g++-12 -fdiagnostics-color=always -Wextra -Wall -pipe -fmax-errors=20 -Wno-odr -Wno-stringop-overread -Wno-stringop-overflow -Wno-nonnull -Wno-array-bounds -Wno-expansion-to-defined -Wno-noexcept-type -Wno-subobject-linkage -Wno-psabi -Wno-misleading-indentation -Wno-maybe-uninitialized -Wundef -Wpointer-arith -Wmissing-format-attribute -Wformat-security -Wcast-align -Wno-tautological-compare -fasynchronous-unwind-tables -fdebug-types-section -fno-omit-frame-pointer -fno-strict-aliasing -fno-exceptions -fno-rtti -fcoroutines -ffunction-sections -fdata-sections -O3 -DNDEBUG -L/home/buildbot/worker/WPE-Linux-64-bit-Release-Ubuntu-2204-Build/build/WebKitBuild/DependenciesWPE/Root/lib -Wl,--gc-sections -Wl,--disable-new-dtags @CMakeFiles/TestWebCore.rsp -o bin/TestWebKitAPI/TestWebCore && : Source/WebCore/CMakeFiles/WebCore.dir/./platform/graphics/texmap/coordinated/CoordinatedPlatformLayerBufferVideo.cpp.o:CoordinatedPlatformLayerBufferVideo.cpp:function WebCore::CoordinatedPlatformLayerBufferVideo::createBufferFromDMABufMemory(): error: undefined reference to 'WebCore::VideoFrameGStreamer::getDMABuf()' collect2: error: ld returned 1 exit status
Attachments
Philippe Normand
Comment 1 2026-01-27 08:07:11 PST
EWS
Comment 2 2026-01-27 09:04:44 PST
Committed 306283@main (df4a497be6f4): <https://commits.webkit.org/306283@main> Reviewed commits have been landed. Closing PR #57332 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2026-01-27 09:05:12 PST
Note You need to log in before you can comment on or make changes to this bug.