REGRESSION(306270@main): [GStreamer] Broken build with GStreamer versions < 1.24 https://bugs.webkit.org/show_bug.cgi?id=306335

Unreviewed, fix the build for GStreamer versions older than 1.24.

In 306270@main the DMABuf handling was only partly made specific to GStreamer versions newer than
1.24. Make this explicit for users of the new getDMABuf() VideoFrame method.

* Source/WebCore/platform/graphics/gstreamer/VideoFrameGStreamer.cpp:
* Source/WebCore/platform/graphics/gstreamer/VideoFrameGStreamer.h:
* Source/WebCore/platform/graphics/texmap/coordinated/CoordinatedPlatformLayerBufferVideo.cpp:
(WebCore::CoordinatedPlatformLayerBufferVideo::createBufferIfNeeded):
* Source/WebCore/platform/graphics/texmap/coordinated/CoordinatedPlatformLayerBufferVideo.h:

Canonical link: https://commits.webkit.org/306283@main